<?xml version="1.0"?>
<package format="2">
    <name>sts_bt_library</name>
    <version>1.0.0</version>
    <description>StS Implementation of the ROS behavior_tree_core package based on https://github.com/miccol/Behavior-Tree</description>
    <author>Nick Fiege, Sebastian Mueller, Robert Rudolph</author>
    <maintainer email="nick.fiege@streetscooter.com">Nick Fiege</maintainer>
    <maintainer email="sebastian.mueller2@streetscooter.com">Sebastian Mueller</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- ros dependencys -->
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>

    <!--<depend>message_generation</depend>-->
    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>


    <depend>sts_virtual_interface_msgs</depend>



</package>
